New entries should be added at the top

==============================================================
2004-10-27 Added two more backends: backend_cairo.py, backend_gtkcairo.py
           They are not complete yet, currently backend_gtkcairo just renders 
           polygons, rectangles and lines - SC

2004-10-21 Added polar axes and plots - JDH

2004-10-20 Fixed corrcoef bug exposed by corrcoef(X) where X is matrix
           - JDH

2004-10-19 Added kwarg support to xticks and yticks to set ticklabel
           text properties -- thanks to T. Edward Whalen for the suggestion

2004-10-19 Added support for PIL images in imshow(), image.py - ADS

2004-10-19 Re-worked exception handling in _image.py and _transforms.py
           to avoid masking problems with shared libraries.  - JTM

2004-10-16 Streamlined the matlab interface wrapper, removed the
           noplot option to hist - just use mlab.hist instead.

2004-09-30 Added Andrew Dalke's strftime code to extend the range of
           dates supported by the DateFormatter - JDH

2004-09-30 Added barh - JDH

2004-09-30 Removed fallback to alternate array package from numerix
           so that ImportErrors are easier to debug.           JTM

2004-09-30 Add GTK+ 2.4 support for the message in the toolbar. SC

2004-09-30 Made some changes to support python22 - lots of doc
           fixes. - JDH

2004-09-29 Added a Verbose class for reporting - JDH

==============================================================

2004-09-28 Released 0.63.0

2004-09-28 Added save to file object for agg - see
           examples/print_stdout.py

2004-09-24 Reorganized all py code to lib subdir

2004-09-24 Fixed axes resize image edge effects on interpolation -
           required upgrade to agg22 which fixed an agg bug related to
           this problem

2004-09-20 Added toolbar2 message display for backend_tkagg.  JTM


2004-09-17 Added coords formatter attributes.  These must be callable,